Updated CSS and index page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <dl>
       <dt>No central repository
       </dt>
-      <dd>All copies of it are local and can update other copies</dd>
+      <dd>All copies of it are local and can update other copies.</dd>
       <dt>Doesn&rsquo;t create multiple copies of files
       </dt>
       <dd>Git maintains a single directory structure. &quot;Snapshots&quot; are taken of projects as they progress to save history states.</dd>
